--- a/ui-showcase/pom.xml
+++ b/ui-showcase/pom.xml
@@ -40,6 +40,17 @@
                     <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
+    
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>db</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
