--- a/ui-showcase/pom.xml
+++ b/ui-showcase/pom.xml
@@ -107,6 +107,13 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
+
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.2.1</version>
+		</dependency>
     </dependencies>
+
 
 </project>
