--- a/form-samples/pom.xml
+++ b/form-samples/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.opensingular</groupId>
         <artifactId>singular-samples</artifactId>
-        <version>1.6.5-RC</version>
+        <version>1.6.5-RC2</version>
     </parent>
 
     <artifactId>singular-form-samples</artifactId>
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>org.opensingular</groupId>
             <artifactId>singular-form-wicket</artifactId>
-            <version>1.6.5-RC</version>
+            <version>1.6.5-RC2</version>
         </dependency>
         <dependency>
             <groupId>org.opensingular</groupId>
             <artifactId>singular-support</artifactId>
-            <version>1.6.5-RC</version>
+            <version>1.6.5-RC2</version>
         </dependency>
 
         <dependency>
